--- a/lms_frontend/package.json
+++ b/lms_frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@tailwindcss/vite": "^4.1.4",
+    "axios": "^1.8.4",
     "chart.js": "^4.4.9",
     "daisyui": "^5.0.28",
     "react": "^19.0.0",
